Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.4(EOL)
-
None
Description
galera_3nodes.galera_safe_to_bootstrap 'innodb' w6 [ fail ] Found warnings/errors in server log file!
Test ended at 2020-02-19 06:14:51
line
2020-02-19 6:14:25 0 [ERROR] Plugin 'wsrep' init function returned error.
2020-02-19 6:14:25 0 [ERROR] Plugin 'wsrep' registration as a STORAGE ENGINE failed.
2020-02-19 6:14:25 0 [ERROR] Failed to initialize plugins.
^ Found warnings in /var/tmp/mtr/6/log/mysqld.3.err
ok
line
2020-02-19 6:14:22 0 [ERROR] Plugin 'wsrep' init function returned error.
2020-02-19 6:14:22 0 [ERROR] Plugin 'wsrep' registration as a STORAGE ENGINE failed.
2020-02-19 6:14:22 0 [ERROR] Failed to initialize plugins.
^ Found warnings in /var/tmp/mtr/6/log/mysqld.2.err
ok
- skipping '/var/tmp/mtr/6/log/galera_3nodes.galera_safe_to_bootstrap-innodb/'
Retrying test galera_3nodes.galera_safe_to_bootstrap, attempt(2/3)...